Show total hours for completed runs in driver table

--- a/app/views/drivers/_driver.html.erb
+++ b/app/views/drivers/_driver.html.erb
@@ -14,4 +14,7 @@
   <td>
     <%= driver.compliant? ? translate_helper("no") : translate_helper("yes") %>
   </td>
+  <td>
+    <%= driver.run_hours %>
+  </td>
 </tr>
