--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -23,6 +23,7 @@
           <th class="col-sm-2"><%= translate_helper("paid") %></th>
           <th class="col-sm-2"><%= translate_helper("driver_form_available") %></th>
           <th class="col-sm-2"><%= translate_helper("driver_overdue_events") %></th>
+          <th class="col-sm-2"><%= translate_helper("driver_completed_run_hours") %></th>
         </tr>
       </thead>
       <tbody>
