--- a/app/views/trips/_filters.html.haml
+++ b/app/views/trips/_filters.html.haml
@@ -8,22 +8,23 @@
       .btns.pull-right
         = f.submit  translate_helper(:ok), id: 'runTripFilters', class: 'btn action-button', role: 'button'
         = button_tag  translate_helper(:reset), id: 'resetTripFilters', class: 'btn action-button', role: 'button'
-      .col-sm-12{style: 'padding: 5px;'}
-        = f.label :start, translate_helper("from_date")
-        = f.text_field :start, :value => format_time_for_listing_day(@start_pickup_date), class: 'date-picker form-control', readonly: true
-      .col-sm-12{style: 'padding: 5px;'}
-        = f.label :end, translate_helper("to_date")
-        = f.text_field :end, :value => format_time_for_listing_day(@end_pickup_date), class: 'date-picker form-control', readonly: true
-      .col-sm-12{style: 'padding: 5px;'}
-        = render partial: 'weekday_select'
-      .col-sm-12{style: 'padding: 5px;'}
-        = f.label :status_id, translate_helper(:status)
-        = f.select :status_id, options_for_select( [[translate_helper(:scheduled), 1], [translate_helper(:unscheduled), 2]], session[:status_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
-      .col-sm-12{style: 'padding: 5px;'}
-        = f.label :customer_id, translate_helper(:customer)
-        - customer_name = Customer.find_by_id(session[:customer_id]).name unless session[:customer_id].blank?
-        = autocomplete_field_tag 'customer_name', customer_name, autocomplete_customers_path(active_only: true), :delay => 200, :id_element => "#customer_id", :class => 'form-control', :placeholder => 'type first or last name (2 chars min.)'
-        = hidden_field_tag 'trip_filters[customer_id]', session[:customer_id], id: 'customer_id'
+      .filter-body
+        .col-sm-12{style: 'padding: 5px;'}
+          = f.label :start, translate_helper("from_date")
+          = f.text_field :start, :value => format_time_for_listing_day(@start_pickup_date), class: 'date-picker form-control', readonly: true
+        .col-sm-12{style: 'padding: 5px;'}
+          = f.label :end, translate_helper("to_date")
+          = f.text_field :end, :value => format_time_for_listing_day(@end_pickup_date), class: 'date-picker form-control', readonly: true
+        .col-sm-12{style: 'padding: 5px;'}
+          = render partial: 'weekday_select'
+        .col-sm-12{style: 'padding: 5px;'}
+          = f.label :status_id, translate_helper(:status)
+          = f.select :status_id, options_for_select( [[translate_helper(:scheduled), 1], [translate_helper(:unscheduled), 2]], session[:status_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+        .col-sm-12{style: 'padding: 5px;'}
+          = f.label :customer_id, translate_helper(:customer)
+          - customer_name = Customer.find_by_id(session[:customer_id]).name unless session[:customer_id].blank?
+          = autocomplete_field_tag 'customer_name', customer_name, autocomplete_customers_path(active_only: true), :delay => 200, :id_element => "#customer_id", :class => 'form-control', :placeholder => 'type first or last name (2 chars min.)'
+          = hidden_field_tag 'trip_filters[customer_id]', session[:customer_id], id: 'customer_id'
       = render 'trips/trip_result_filter', f: f
 
 = render "shared/date_time_picker_javascript"
@@ -32,10 +33,11 @@
     makeDatePickers();
     
     $('#resetTripFilters').on('click', function() {
-      $('#trip_filter_form input').val('');
-      $('#trip_filter_form select').val('');
+      $('#trip_filter_form .filter-body input').val('');
+      $('#trip_filter_form .filter-body select').val('');
+      $('.trip_result-filter input[type=checkbox]').prop('checked', true);
 
-      $('#trip_filter_form select').submit();
+      $('#trip_filter_form').submit();
     });
 
     $('#customer_name').change(function() {
