--- a/app/views/trips_runs/_filters.html.haml
+++ b/app/views/trips_runs/_filters.html.haml
@@ -5,31 +5,33 @@
   .panel-body{style: 'padding: 5px;'}
     = form_for :run_trip_filters, url: trips_runs_path, html: { :id => "run_trip_filter_form" }, :method => :get do |f|
       .btns.pull-right
-        = f.submit  translate_helper(:ok), id: 'submitRunTripFilters', class: 'btn action-button', role: 'button'
-        = button_tag  translate_helper(:reset), id: 'resetRunTripFilters', class: 'btn action-button', role: 'button'
-      .col-sm-12{style: 'padding: 5px;'}
-        = f.label :run_trip_day, translate_helper("run_trip_day")
-        = f.text_field :run_trip_day, :value => format_time_for_listing_day(@run_trip_day), class: 'date-picker form-control', readonly: true
-      .col-sm-12#run_filter{style: 'padding: 5px;'}
-        = f.label :run_id, translate_helper(:run)
-        = f.select :run_id, options_from_collection_for_select( Run.for_date(@run_trip_day), :id, :name, session[:run_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
-      .col-sm-12{style: 'padding: 5px;'}
-        = f.label :status_id, translate_helper(:status)
-        = f.select :status_id, options_for_select( [[translate_helper(:scheduled), 1], [translate_helper(:unscheduled), 2]], session[:status_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
-      .col-sm-12{style: 'padding: 5px;'}
-        = f.label :run_result_id, translate_helper(:run_result)
-        = f.select :run_result_id, options_for_select( [[translate_helper(:complete), 1], [translate_helper(:incomplete), 2]], session[:run_result_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+        = button_tag  translate_helper(:ok), id: 'submitRunTripFilters', class: 'btn action-button', role: 'button'
+        = button_tag  translate_helper(:reset), id: 'resetRunTripFilters', class: 'btn action-button', role: 'button', type: 'button'
+      .filter-body
+        .col-sm-12{style: 'padding: 5px;'}
+          = f.label :run_trip_day, translate_helper("run_trip_day")
+          = f.text_field :run_trip_day, :value => format_time_for_listing_day(@run_trip_day), class: 'date-picker form-control', readonly: true
+        .col-sm-12#run_filter{style: 'padding: 5px;'}
+          = f.label :run_id, translate_helper(:run)
+          = f.select :run_id, options_from_collection_for_select( Run.for_date(@run_trip_day), :id, :name, session[:run_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+        .col-sm-12{style: 'padding: 5px;'}
+          = f.label :status_id, translate_helper(:status)
+          = f.select :status_id, options_for_select( [[translate_helper(:scheduled), 1], [translate_helper(:unscheduled), 2]], session[:status_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+        .col-sm-12{style: 'padding: 5px;'}
+          = f.label :run_result_id, translate_helper(:run_result)
+          = f.select :run_result_id, options_for_select( [[translate_helper(:complete), 1], [translate_helper(:incomplete), 2]], session[:run_result_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
       = render 'trips/trip_result_filter', f:f
 = render "shared/date_time_picker_javascript"
 :javascript
   $(document).ready(function(){
     makeDatePickers();
     
-    $('#resetRunTripFilters').on('click', function() {
-      $('#run_trip_filter_form input').val('');
-      $('#run_trip_filter_form select').val('');
+    $('#resetRunTripFilters').on('click', function(e) {
+      $('#run_trip_filter_form .filter-body input').val('');
+      $('#run_trip_filter_form .filter-body select').val('');
+      $('.trip_result-filter input[type=checkbox]').prop('checked', true);
 
-      $('#run_trip_filter_form select').submit();
+      $('#run_trip_filter_form').submit();
     });
 
     $('#run_trip_filters_run_trip_day').change(function() {
