--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -61,12 +61,17 @@
               <% end %>
             </div>
           </div>  
-          <div class="form-group">
-            <%= f.label :email, translate_helper("driver_form_email"), class: "col-md-2 control-label" %>
-            <div class="col-md-10">
-              <%= f.text_field :email, class: "form-control", disabled: @readonly %>
-            </div>
+          <% if @readonly %>
+            <div class="form-group">
+              <%= f.label :email, translate_helper("driver_form_email"), class: "col-md-2 control-label" %>
+              <div class="col-md-10">
+                <%= @driver.user.try(:email)%>
+                <% if can?(:edit, @driver.user) %>
+                  <%= link_to translate_helper("edit"), edit_user_path(@driver.user), class: "btn action-button" %>
+                <% end %>
+              </div>
           </div>  
+          <% end %>
           <div class="form-group">
             <%= f.label :active, translate_helper("driver_form_active"), class: "col-md-2 control-label" %>
             <div class="col-md-10">
