--- a/app/views/trips/_other_panel.html.haml
+++ b/app/views/trips/_other_panel.html.haml
@@ -11,13 +11,13 @@
         - if !@is_repeating_trip &&@trip.customer_informed
           = "on #{@trip.called_back_at}" if @trip.called_back_at.present?
           = "by #{@trip.called_back_by.email}" if @trip.called_back_by.present?
-    - unless @is_repeating_trip  
+    - unless @is_repeating_trip
       .form-group.col-sm-12
         .col-sm-3
           = f.label :trip_result, translate_helper("trip_result")
         .col-sm-9
-          = f.select :trip_result_id, @trip_results,  { :include_blank => true }, {class: 'form-control'} 
-      .form-group.col-sm-12.result_reason{style: @trip.is_no_show_or_turn_down? ? '' : 'display: none;'}
+          = f.select :trip_result_id, @trip_results,  { :include_blank => true }, {class: 'form-control'}
+      .form-group.col-sm-12.result_reason{style: @trip.result_is_cancel_code? ? '' : 'display: none;'}
         .col-sm-3
           = f.label :result_reason, translate_helper("trip_result_reason")
         .col-sm-9
@@ -31,9 +31,9 @@
 
       :javascript
         $(document).ready(function() {
-          var noShowOrTurnDownIds = #{TripResult.where(code: ['NS', 'TD']).pluck(:id).map(&:to_s)};
+          var cancelCodes = #{TripResult.cancel_codes.pluck(:id).map(&:to_s)};
           $('#trip_trip_result_id').change(function() {
-            if (noShowOrTurnDownIds.indexOf($(this).val()) >= 0) {
+            if (cancelCodes.indexOf($(this).val()) >= 0) {
               $('.result_reason').show();
             } else {
               $('.result_reason').hide();
@@ -52,4 +52,4 @@
       .col-sm-3
         = f.label :service_level, translate_helper("trip_service_level")
       .col-sm-9
-        = f.select :service_level_id, @service_levels, { :include_blank => true }, {class: 'form-control'} 
+        = f.select :service_level_id, @service_levels, { :include_blank => true }, {class: 'form-control'}
