--- a/app/views/trips/_trip_result_reason_dialog.html.haml
+++ b/app/views/trips/_trip_result_reason_dialog.html.haml
@@ -8,13 +8,13 @@
         %h5.modal-title{:style => "text-align:left;"}
           %strong
             = translate_helper(:site_title)
-          = translate_helper(:ask_for_trip_result_reason_message)
-        %button
       .modal-body.row{:style => "text-align:left; margin: 0px;"}
-        .col-sm-3{style: 'padding: 5px;'}
-          %label.result-reason-label= translate_helper("result_reason")
-        .col-sm-9{style: 'padding: 5px;'}
+        .col-sm-12{style: 'padding: 5px;'}
+          %label.result-reason-label= translate_helper(:ask_for_trip_result_reason_message)
+        .col-sm-12{style: 'padding: 5px;'}
           %textarea.result-reason-text{ style: 'width: 100%; height: 60px;'}
       .modal-footer
-        .submit-result-reason.btn.btn-primary{ data: {dismiss: 'modal'} } Submit
-        .dismiss-result-reason.btn.btn-danger{ data: {dismiss: 'modal'} } No Thanks
+        .submit-result-reason.btn.btn-primary{ data: {dismiss: 'modal'} }
+          =translate_helper(:submit)
+        .dismiss-result-reason.btn.btn-danger{ data: {dismiss: 'modal'} }
+          =translate_helper(:trip_result_modal_dismiss)
