Fix haml conversion bug in trip row

--- a/app/views/trips/_row.html.haml
+++ b/app/views/trips/_row.html.haml
@@ -1,5 +1,4 @@
-%tr.trip{"data-trip-id" => "<haml_loud"}
-  trip.id&gt;
+%tr.trip{"data-trip-id" => trip.id }
   %td
     = link_to(translate_helper("view"), trip_path(trip))
   %td
