Trip result dialog UI consistency change []RPII-139

--- a/app/views/trips/_trip_result_reason_dialog.html.haml
+++ b/app/views/trips/_trip_result_reason_dialog.html.haml
@@ -5,6 +5,11 @@
   .modal-dialog
     .modal-content
       .modal-header
+        .pull-right
+          .submit-result-reason.btn.btn-primary{ data: {dismiss: 'modal'} }
+            =translate_helper(:submit)
+          .dismiss-result-reason.btn.btn-danger{ data: {dismiss: 'modal'} }
+            =translate_helper(:trip_result_modal_dismiss)
         %h5.modal-title{:style => "text-align:left;"}
           %strong
             = translate_helper(:site_title)
@@ -12,9 +17,5 @@
         .col-sm-12{style: 'padding: 5px;'}
           %label.result-reason-label= translate_helper(:ask_for_trip_result_reason_message)
         .col-sm-12{style: 'padding: 5px;'}
-          %textarea.result-reason-text{ style: 'width: 100%; height: 60px;'}
-      .modal-footer
-        .submit-result-reason.btn.btn-primary{ data: {dismiss: 'modal'} }
-          =translate_helper(:submit)
-        .dismiss-result-reason.btn.btn-danger{ data: {dismiss: 'modal'} }
-          =translate_helper(:trip_result_modal_dismiss)
+          %textarea.result-reason-text.form-control{ style: 'width: 100%; height: 60px;'}
+
