Warn user when trying to book a trip that may be double-booked

--- a/app/views/trips/_javascript.html.erb
+++ b/app/views/trips/_javascript.html.erb
@@ -1,3 +1,5 @@
+<! DEPRECATED >
+
 <%= render "shared/date_time_picker_javascript" %>
 <script type='text/javascript'>
   $(document).ready(function() {
