--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -1,43 +1,45 @@
 :ruby
   @is_repeating_trip = @trip.is_a? RepeatingTrip
+  @trip_id = @trip ? @trip.id : nil
 
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'trips'
 - edit_mode = :edit if !defined? edit_mode
-= form_for @trip, :html => (@remote ? {"data-remote" => true, class: 'trip_form'} : {class: 'trip_form'} ) do |f| 
+= form_for @trip,
+  html: { class: 'trip_form', "data-remote" => @remote } do |f|
   - if @is_repeating_trip
-    = render 'repeating_trips/form_header', edit_mode: edit_mode, f: f 
-  - else  
-    = render 'trips/form_header', edit_mode: edit_mode, f: f 
+    = render 'repeating_trips/form_header', edit_mode: edit_mode, f: f
+  - else
+    = render 'trips/form_header', edit_mode: edit_mode, f: f
 
-  - if @trip.errors.any? 
+  - if @trip.errors.any?
     #error_explanation
       %h2= translate_helper("trip_form_error_message", count: @trip.errors.count)
 
       %ul
-        - @trip.errors.full_messages.each do |msg| 
-          %li= msg 
+        - @trip.errors.full_messages.each do |msg|
+          %li= msg
 
   -# the customer id needs to be passed in this action
-  = f.hidden_field :customer_id, class: 'trip-customer-id'  
+  = f.hidden_field :customer_id, class: 'trip-customer-id'
   - unless @is_repeating_trip
-    = f.hidden_field :direction 
-    = hidden_field_tag "trip[outbound_trip_id]", @trip.outbound_trip.try(:id) 
+    = f.hidden_field :direction
+    = hidden_field_tag "trip[outbound_trip_id]", @trip.outbound_trip.try(:id)
 
   .col-sm-12.col-md-6
-    = render 'trips/customer_panel', f: f, edit_mode: edit_mode 
-    = render 'trips/trip_parameters_panel', f: f, edit_mode: edit_mode 
-    = render 'trips/eligibility_accommodation_panel', f: f, edit_mode: edit_mode 
-  
+    = render 'trips/customer_panel', f: f, edit_mode: edit_mode
+    = render 'trips/trip_parameters_panel', f: f, edit_mode: edit_mode
+    = render 'trips/eligibility_accommodation_panel', f: f, edit_mode: edit_mode
+
   .col-sm-12.col-md-6
     = render 'repeating_trips/repetition_panel', f: f if @is_repeating_trip
-    = render 'trips/other_panel', f: f 
+    = render 'trips/other_panel', f: f
     - if !@is_repeating_trip && edit_mode != :new
       = render 'trips/assignment_panel', f: f
 
 - if edit_mode != :show
   = render 'trips/customer_trip_summary_dialog'
   - if @is_repeating_trip
-    :javascript 
+    :javascript
       $(function() {
         $('body').on('dblclick', '#customerTripSummaryTable td', function() {
           var trip_id = $(this).parents('tr').data('trip-id');
@@ -45,7 +47,7 @@
         });
       });
   - else
-    :javascript 
+    :javascript
       $(function() {
         $('body').on('dblclick', '#customerTripSummaryTable td', function() {
           var trip_id = $(this).parents('tr').data('trip-id');
@@ -53,12 +55,67 @@
         });
       });
 
+  -# = form_for @trip,
+  -#   html: { class: "trip-check-double-booked-form"},
+  -#   url: trip_check_double_booked_path(@trip),
+  -#   method: :post, remote: true do |f|
+  -#   = f.input ""
+  
+  = render partial: 'double_booked_trip_dialog'
+
   :javascript
     $(document).ready(function(){
       makeDatePickers();
-    });    
+      var doubleBookedTripRowHtml = "#{escape_javascript(render partial: 'double_booked_trip_row')}"
+
+      // On form submit, check for potential double-booking before submitting form
+      $('form.trip_form').submit(function(e) {
+        console.log("FORM SUBMITTED");
+        e.preventDefault();
+        var form = this;
+        
+        var data = {
+          trip: {
+            id: #{@trip_id || 'null'},
+            customer_id: $(this).find('.trip-customer-id').val(),
+            date: $(this).find('input#trip_date').val()
+          }
+        };
+
+        $.ajax({
+          type: 'POST',
+          url: "#{check_double_booked_trips_path}",
+          data: data,
+          dataType: 'json'
+        }).done(function(data) {
+          // If double booking exists, alert user and let them cancel or continue
+          if(data.trips.length > 0) {
+            var modal = $('#doubleBookedTripDialog');
+            var table = modal.find('#double-booked-trips-table');
+            table.find('.header-row').nextAll().remove(); // Clear all rows
+            data.trips.forEach(function(trip) {
+              table.append(doubleBookedTripRowHtml);
+              var row = table.find('.double-booked-trip-row').last();
+              row.find('.trip-id').text(trip.id);
+              row.find('.trip-date').text(trip.date);
+              row.find('.trip-pickup-time').text(trip.pickup_time);
+              row.find('.trip-appointment-time').text(trip.appointment_time);
+            })
+            modal.modal("show");
+            // If modal submit button is clicked, submit form.
+            modal.find('.submit-double-book-modal').click(function() {
+              form.submit();
+            });
+          // Else, submit form
+          } else {
+            form.submit();
+          }
+        });
+        
+      });
+    });
 
 - if @is_repeating_trip
-  = render 'shared/hide_invisible_form_fields_js', model_name: "repeatingtrip", table_name: 'repeating_trips', provider_id:  current_provider.try(:id) 
+  = render 'shared/hide_invisible_form_fields_js', model_name: "repeatingtrip", table_name: 'repeating_trips', provider_id:  current_provider.try(:id)
 - else
-  = render 'shared/hide_invisible_form_fields_js', model_name: "trip", table_name: 'trips', provider_id:  current_provider.try(:id) 
+  = render 'shared/hide_invisible_form_fields_js', model_name: "trip", table_name: 'trips', provider_id:  current_provider.try(:id)
