--- a/app/views/trips/edit.html.haml
+++ b/app/views/trips/edit.html.haml
@@ -1,4 +1,4 @@
-= render 'form', edit_mode: :edit 
+= render 'form', edit_mode: :edit
 
-= render 'javascript' 
-
+-# DEPRECATED
+-# = render 'javascript'
