--- a/app/views/trips/_trip_parameters_panel.html.haml
+++ b/app/views/trips/_trip_parameters_panel.html.haml
@@ -75,6 +75,13 @@
           = hidden_field_tag 'trip_pickup_google_address', params[:trip_pickup_google_address], class: 'trip_pickup_google_address'
 
     .form-group.col-sm-12
+      .col-sm-3
+        %label{for:"pickup_address_notes"}
+          = translate_helper("pickup_address_notes")
+      .col-sm-9
+        %input.full.form-control#pickup_address_notes{type:"text", size:"30", name:"pickup_address_notes", value:"#{@trip.pickup_address.try(:notes)}", readonly:"readonly"}
+
+    .form-group.col-sm-12
       = f.fields_for :customer do |c|
         .col-sm-3
           = c.label :phone_number_1, translate_helper("customer_phone")
@@ -95,6 +102,13 @@
         - if edit_mode != :show
           = f.hidden_field :dropoff_address_id, class: 'trip_dropoff_address_id'
           = hidden_field_tag 'trip_dropoff_google_address', params[:trip_dropoff_google_address], class: 'trip_dropoff_google_address'
+
+    .form-group.col-sm-12
+      .col-sm-3
+        %label{for:"dropoff_address_notes"}
+          = translate_helper("dropoff_address_notes")
+      .col-sm-9
+        %input.full.form-control#dropoff_address_notes{type:"text", size:"30", name:"dropoff_address_notes", value:"#{@trip.dropoff_address.try(:notes)}", readonly:"readonly"}
 
     .form-group.col-sm-12
       .col-sm-3
