Complete Warning Message for Double Booked Trips

--- a/app/views/trips/_double_booked_trip_dialog.html.haml
+++ b/app/views/trips/_double_booked_trip_dialog.html.haml
@@ -10,7 +10,7 @@
             = translate_helper(:site_title)
       .modal-body.row{:style => "text-align:left; margin: 0px;"}
         .col-sm-12{style: 'padding: 5px;'}
-          %label.result-reason-label= "The trip may be double booked on the following times. Do you wish to continue?"#translate_helper(:ask_for_trip_result_reason_message)
+          %label.result-reason-label= "The trip may be double with the following trips. Do you wish to continue?"#translate_helper(:ask_for_trip_result_reason_message)
           %table#double-booked-trips-table
             %tr.header-row
               %th="ID"
