--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -61,61 +61,47 @@
   -#   method: :post, remote: true do |f|
   -#   = f.input ""
   
-  = render partial: 'double_booked_trip_dialog'
-
-  :javascript
-    $(document).ready(function(){
-      makeDatePickers();
-      var doubleBookedTripRowHtml = "#{escape_javascript(render partial: 'double_booked_trip_row')}"
-
-      // On form submit, check for potential double-booking before submitting form
-      $('form.trip_form').submit(function(e) {
-        console.log("FORM SUBMITTED");
-        e.preventDefault();
-        var form = this;
-        
-        var data = {
-          trip: {
-            id: #{@trip_id || 'null'},
-            customer_id: $(this).find('.trip-customer-id').val(),
-            date: $(this).find('input#trip_date').val()
-          }
-        };
-
-        $.ajax({
-          type: 'POST',
-          url: "#{check_double_booked_trips_path}",
-          data: data,
-          dataType: 'json'
-        }).done(function(data) {
-          // If double booking exists, alert user and let them cancel or continue
-          if(data.trips.length > 0) {
-            var modal = $('#doubleBookedTripDialog');
-            var table = modal.find('#double-booked-trips-table');
-            table.find('.header-row').nextAll().remove(); // Clear all rows
-            data.trips.forEach(function(trip) {
-              table.append(doubleBookedTripRowHtml);
-              var row = table.find('.double-booked-trip-row').last();
-              row.find('.trip-id').text(trip.id);
-              row.find('.trip-date').text(trip.date);
-              row.find('.trip-pickup-time').text(trip.pickup_time);
-              row.find('.trip-appointment-time').text(trip.appointment_time);
-            })
-            modal.modal("show");
-            // If modal submit button is clicked, submit form.
-            modal.find('.submit-double-book-modal').click(function() {
-              form.submit();
-            });
-          // Else, submit form
-          } else {
-            form.submit();
-          }
-        });
-        
-      });
-    });
+= render partial: 'double_booked_trip_dialog'
 
 - if @is_repeating_trip
   = render 'shared/hide_invisible_form_fields_js', model_name: "repeatingtrip", table_name: 'repeating_trips', provider_id:  current_provider.try(:id)
 - else
   = render 'shared/hide_invisible_form_fields_js', model_name: "trip", table_name: 'trips', provider_id:  current_provider.try(:id)
+
+
+:javascript
+  $(document).ready(function(){
+    // makeDatePickers(); // DEPRECATED
+
+    var doubleBookedTripRowHtml = "#{escape_javascript(render partial: 'double_booked_trip_row')}"
+    var dbh = new DoubleBookedTripsHelper({
+      tableRowHtml: doubleBookedTripRowHtml,
+      url: "#{check_double_booked_trips_path}",
+      form: $('form.trip_form'),
+      modal: $('#doubleBookedTripDialog'),
+      table: $('#doubleBookedTripDialog #double-booked-trips-table')
+    })
+
+    // On form submit, check for potential double-booking before submitting form
+    dbh.form.submit(function(e) {
+      var form = this;
+      e.preventDefault();
+      var requestBody = dbh.requestBodyFromForm(#{@trip_id || 'null'});
+
+      dbh.checkDoubleBooked(requestBody, function(data) {
+        // If double booking exists, alert user and let them cancel or continue
+        if(data.trips.length > 0) {
+          dbh.populateTable(data.trips);
+          dbh.showModal();
+          // If modal submit button is clicked, submit form.
+          dbh.modal.find('.submit-double-book-modal').click(function() {
+            form.submit();
+          });
+        // Else, submit form
+        } else {
+          form.submit();
+        }
+      });
+      
+    });
+  });
