--- a/app/views/trips/_double_booked_trip_row.html.haml
+++ b/app/views/trips/_double_booked_trip_row.html.haml
@@ -1,5 +1,5 @@
 %tr.double-booked-trip-row
-  %td.trip-id
-  %td.trip-date
-  %td.trip-appointment-time
   %td.trip-pickup-time
+  %td.trip-pickup-address
+  %td.trip-appointment-time
+  %td.trip-dropoff-address
