Allow batch cancellation of multiple trips

--- a/app/views/trips/_list.html.haml
+++ b/app/views/trips/_list.html.haml
@@ -2,7 +2,7 @@
   %tr
     -# first two columns are for select and view link
     %th
-      %input{type: "checkbox"}
+      %input.master-select-checkbox{type: "checkbox"}
     %th
     %th= translate_helper("pickup_date_column")
     %th= translate_helper("customer_column")
