--- a/app/views/trips/_row.html.haml
+++ b/app/views/trips/_row.html.haml
@@ -1,6 +1,6 @@
 %tr.trip{"data-trip-id" => trip.id }
   %td
-    %input{type: "checkbox"}
+    %input.trip-selected{type: "checkbox"}
   %td
     = link_to(translate_helper("view"), trip_path(trip))
   %td
