--- a/app/views/drivers/_form.html.haml
+++ b/app/views/drivers/_form.html.haml
@@ -44,7 +44,7 @@
               = f.label :email, translate_helper("driver_form_email"), class: "col-md-2 control-label"
               .col-md-10
                 = @driver.user.try(:email) || @driver.email
-                - @driver.user.present? && !@driver.user.deleted? && if can?(:edit, @driver.user)
+                - if @driver.user.present? && !@driver.user.deleted? && can?(:edit, @driver.user)
                   = link_to translate_helper("edit"), edit_user_path(@driver.user), class: "btn action-button"
           .form-group
             = f.label :active, translate_helper("driver_form_active"), class: "col-md-2 control-label"
