--- a/app/views/customers/_eligibility_panel.html.haml
+++ b/app/views/customers/_eligibility_panel.html.haml
@@ -5,13 +5,23 @@
     %h3.panel-title
       = translate_helper(:customer_eligibility_panel)
   .panel-body{style: 'padding: 5px;'}
+    - yes_label = translate_helper('eligible')
+    - no_label = translate_helper('not_eligible')
     .form-group.col-sm-12
       .col-sm-7.control-label
-        = translate_helper(:age_eligible)
+        %b= translate_helper(:age_eligible)
       .col-sm-5
-        = @customer.age_eligible? ? translate_helper(:eligible) : translate_helper(:not_eligible)
-    - Eligibility.by_provider(current_provider).each do |eligibility|
-      = render 'eligibility_item', item: eligibility
+        = @customer.age_eligible? ? yes_label : no_label
+    - if edit_mode == :show
+      - @customer.customer_eligibilities.specified.includes(:eligibility).references(:eligibility).each do |elig|
+        .form-group.col-sm-12
+          .col-sm-7.control-label
+            %b= elig.eligibility.description
+          .col-sm-5
+            = elig.eligible ? yes_label : no_label
+    - else
+      - Eligibility.by_provider(current_provider).each do |eligibility|
+        = render 'eligibility_item', item: eligibility
 
 :javascript
   $('document').ready(function() {
