--- a/app/views/customers/_eligibility_panel.html.haml
+++ b/app/views/customers/_eligibility_panel.html.haml
@@ -5,8 +5,8 @@
     %h3.panel-title
       = translate_helper(:customer_eligibility_panel)
   .panel-body{style: 'padding: 5px;'}
-    - yes_label = translate_helper('eligible')
-    - no_label = translate_helper('not_eligible')
+    - yes_label = translate_helper('yes')
+    - no_label = translate_helper('no')
     .form-group.col-sm-12
       .col-sm-7.control-label
         %b= translate_helper(:age_eligible)
